2009-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: close FILE instead of fd.
	* client-src/selfcheck.c: fix fd leak with app_stderr.

2009-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (merge_property, merge_properties):
						 New functions.
	* client-src/client_util.h: New prototypes.
	* common-src/conffile.c (amandaify_property_name): New function.
	* common-src/conffile.h (amandaify_property_name): New prototypes.
	* recover-src/extract_list.c: Call merge_properties, it merge property
	  from amanda header with property set in amrecover.
	  Report the directory property if set.
	* recover-src/set_commands.c: Call amandaify_property_name.

2009-11-03  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/xfer-dest-taper-splitter.c: make disk_cache_thread wait
	  to be un-paused before starting to cache a part
	* xfer-src/dest-null.c: add additional debugging info

2009-11-03  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/Makefile.am device-src/directtcp-target.c
	  device-src/directtcp-target.h: add new DirectTCPTarget interface, for
	  use by devices supporting DirectTCP

2009-11-03  Paul C. Mantz  <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: added state flags
	* instalcheck/Amanda_Report.pl: tests

2009-11-02  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/testutils.c: fix uninitialized variable, only run one
	  test in non-fork mode

2009-11-02  Dustin J. Mitchell <dustin@zmanda.com>

	* device-src/xfer-dest-taper-splitter.c: eliminate deadlock, take
	  'first_device' and calculate slab size immediately instead of waiting
	  for start_part
	* device-src/xfer-device.h: first_device parameter
	* perl/Amanda/XferServer.swg: swig
	* perl/Amanda/Xfer.pod: docs
	* installcheck/Amanda_Xfer_serveronly.pl: send first_device properly
	* perl/Amanda/Taper/Scribe.pm: send first_device properly

2009-10-30  Satya Ganga <gsat@zmanda.com>