@@ -1429,10 +1429,6 @@ getsize_dump(
 #endif							/* } */
     {
 	name = stralloc(" (vdump)");
-	amfree(device);
-	amfree(qdevice);
-	device = amname_to_dirname(amdevice);
-	qdevice = quote_string(device);
 	dumpkeys = vstralloc(level_str, "b", "f", NULL);
 	dbprintf(_("running \"%s%s %s 60 - %s\"\n"),
 		  cmd, name, dumpkeys, qdevice);
