@@ -1,4 +1,8 @@
 2009-11-05  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/sendbackup-dump.c, client-src/sendsize.c:
+	  Fix compiler error if VXDUMP or VDUMP is defined.
+
+2009-11-05  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/client_util.c: close FILE instead of fd.
 	* client-src/selfcheck.c: fix fd leak with app_stderr.
 
